fix: use correct command ID and store output